[package]
name = "rococo-runtime"
version = "0.8.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"
hex-literal = "0.3.1"
log = { version = "0.4.14", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-staking-reward-curve = { package = "pallet-staking-reward-curve", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-indices/std",
	"pallet-im-online/std",
	"inherents/std",
	"frame-support/std",
	"polkadot-parachain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"pallet-session/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"pallet-offences/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"log/std",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
