[package]
name = "polkadot-test-runtime"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-nicks = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
serde_json = "1.0.61"

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"pallet-randomness-collective-flip/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
]
