[package]
name = "pallet-bridge-currency-exchange"
description = "A Substrate Runtime module that accepts 'lock funds' transactions from a peer chain and grants an equivalent amount to a the appropriate Substrate account."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0", optional = true }

# Bridge dependencies

bp-currency-exchange = { path = "../../primitives/currency-exchange", default-features = false }
bp-header-chain = { path = "../../primitives/header-chain", default-features = false }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "state-trace-rpc" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "state-trace-rpc" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

[features]
default = ["std"]
std = [
	"bp-currency-exchange/std",
	"bp-header-chain/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-std",
]
