[package]
name = "polkadot-test-client"
version = "0.8.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
