[package]
name = "polkadot-test-service"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.25"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
tokio = { version = "0.2", features = ["macros"] }
